--- a/style/app.scss
+++ b/style/app.scss
@@ -1,4 +1,15 @@
-@import "normalize";
-@import "skeleton";
 @import "variables";
+@import "base";
+@import "grid";
+@import "menu";
+@import "mixins";
+@import "extends";
+@import "common";
+@import "typography";
+@import "header";
+@import "section";
+@import "footer";
 
+
+.work-item {
+}
