--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -2,7 +2,9 @@
 $background-color: #F9F9F9;
 $nav-text-color: #4E4E4E;
 $body-text-color: #707070;
+$body-text-color-light: $background-color;
 $primary-highlight-color: #DE6162;
+$work-section-text-color-dark: #000;
 
 $section-header-color: #C9C9C9;
 
