--- a/style/_base.scss
+++ b/style/_base.scss
@@ -464,3 +464,16 @@ th {
     height: auto;
     display: block;
 }
+
+/* ==========================================================================
+   My Extras
+   ========================================================================== */
+
+h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+
+
+
+
