--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -31,3 +31,16 @@
   background-position: top center;
   background-size: cover;
 }
+
+@mixin view-case-study($active-color, $normal-color) {
+    font-size: 0.8em;
+    border: 2px solid $normal-color;
+    border-radius: 4px;
+    padding: 0.8em 1em;
+
+    &:hover,
+    &:active {
+      background-color: $normal-color;
+      color: $active-color;
+    }
+  }
