--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -30,8 +30,18 @@ footer {
 
     a {
       color: #333;
-      font-size: 2em;
-      padding: 0.3em 0.8em;
+      padding: 0.4em;
+
+      span {
+        font-size: 1.6em;
+        @media screen and (min-width: $small-devices-up) {
+          font-size: 2em;
+        }
+      }
+
+      @media screen and (min-width: $small-devices-up) {
+        padding: 1em;
+      }
 
       &:hover {
         color: $primary-highlight-color;
