--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -36,7 +36,7 @@
     font-size: 0.8em;
     border: 2px solid $normal-color;
     border-radius: 4px;
-    padding: 0.8em 1em;
+    padding: 0.9em 1em 0.8em;
 
     &:hover,
     &:active {
