--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -2,6 +2,9 @@ h2 {
   color: $section-header-color;
   font-weight: 600;
   font-size: 2em;
+  @media screen and (min-width: $small-devices-up) {
+    font-size: 2.5em;
+  }
 }
 
 h3 {
@@ -16,6 +19,7 @@ h4 {
 
 p {
   font-family: $secondary-font-stack;
+  font-weight: 400;
   font-size: 1.1em;
   color: $body-text-color;
   line-height: 1.5;
