--- a/style/app.css
+++ b/style/app.css
@@ -1285,7 +1285,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
 .pure-menu-selected .pure-menu-link:visited {
   color: #000; }
 
-section:after, footer:after, #work-pitchmojo:after, #work-sutra:after, #work-jottly:after {
+header:after, section:after, footer:after, #work-pitchmojo:after, #work-sutra:after, #work-jottly:after {
   content: "";
   display: table;
   clear: both; }
@@ -1319,6 +1319,9 @@ h2 {
   color: #c9c9c9;
   font-weight: 600;
   font-size: 2em; }
+  @media screen and (min-width: 35.5em) {
+    h2 {
+      font-size: 2.5em; } }
 
 h3 {
   font-size: 2.3em;
@@ -1330,6 +1333,7 @@ h4 {
 
 p {
   font-family: "minion-pro", serif;
+  font-weight: 400;
   font-size: 1.1em;
   color: #707070;
   line-height: 1.5; }
@@ -1341,11 +1345,17 @@ header nav {
   position: relative;
   margin: 0 auto;
   background: #f9f9f9;
-  padding: 1em 0em; }
+  padding: 1em 2em; }
+  @media screen and (min-width: 35.5em) {
+    header nav {
+      padding: 1em 2em 1em 1em; } }
 
 .logo {
   width: 100%;
   display: block; }
+  @media screen and (min-width: 35.5em) {
+    .logo {
+      width: initial; } }
   .logo img {
     width: 4em;
     vertical-align: middle; }
@@ -1353,6 +1363,12 @@ header nav {
 ul.pure-menu-list.menu {
   display: block;
   width: 100%; }
+
+@media screen and (min-width: 35.5em) {
+  header ul.pure-menu-list.menu {
+    width: initial;
+    display: inline-block;
+    float: right; } }
 
 .pure-menu-selected a.pure-menu-link.current-page {
   border-bottom: 0.2em solid #de6162; }
@@ -1362,10 +1378,13 @@ ul.pure-menu-list.menu {
   font-size: 0.9em;
   padding: 0;
   padding-bottom: 0.2em;
-  margin: 1em 0.5em; }
+  margin: 1em; }
   .pure-menu-link:hover {
     background: none;
     border-bottom: 0.2em solid #de6162; }
+  @media screen and (min-width: 35.5em) {
+    .pure-menu-link {
+      font-size: 1em; } }
 
 section, footer {
   position: relative; }
@@ -1375,6 +1394,9 @@ section, footer {
   .section-content p {
     line-height: 1.6;
     padding-top: 0.8em; }
+    @media screen and (min-width: 35.5em) {
+      .section-content p {
+        font-size: 1.3em; } }
 
 .work-content {
   height: 20em;
@@ -1397,7 +1419,7 @@ section, footer {
     font-size: 0.8em;
     border: 2px solid #f9f9f9;
     border-radius: 4px;
-    padding: 0.8em 1em; }
+    padding: 0.9em 1em 0.8em; }
     .work-content a:hover, .work-content a:active {
       background-color: #f9f9f9;
       color: #4e4e4e; }
@@ -1430,7 +1452,7 @@ section, footer {
     font-size: 0.8em;
     border: 2px solid black;
     border-radius: 4px;
-    padding: 0.8em 1em; }
+    padding: 0.9em 1em 0.8em; }
     #work-sutra a:hover, #work-sutra a:active {
       background-color: black;
       color: #f9f9f9; }
@@ -1463,8 +1485,15 @@ section, footer {
     display: inline-flex; }
     .social-media-icons .icon a {
       color: #333;
-      font-size: 2em;
-      padding: 0.3em 0.8em; }
+      padding: 0.4em; }
+      .social-media-icons .icon a span {
+        font-size: 1.6em; }
+        @media screen and (min-width: 35.5em) {
+          .social-media-icons .icon a span {
+            font-size: 2em; } }
+      @media screen and (min-width: 35.5em) {
+        .social-media-icons .icon a {
+          padding: 1em; } }
       .social-media-icons .icon a:hover {
         color: #de6162; }
 
