fleshing out case study styles

--- a/style/_extends.scss
+++ b/style/_extends.scss
@@ -34,3 +34,8 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
+%p-centered {
+  font-family: $primary-font-stack;
+  text-align: center;
+}
