--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -29,3 +29,9 @@ p > span {
   @extend %highlight;
   font-style: italic;
 }
+
+h5 {
+  font-weight: 600;
+  font-size: 1.8em;
+  color: #4E4E4E;
+}
