--- a/style/app.scss
+++ b/style/app.scss
@@ -6,6 +6,11 @@
 @import "extends";
 @import "common";
 @import "typography";
+
+//home
 @import "header";
 @import "section";
 @import "footer";
+
+//case studies
+@import "pitchmojo";
