--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -35,3 +35,11 @@ h5 {
   font-size: 1.8em;
   color: #4E4E4E;
 }
+
+h6 {
+  font-weight: 300;
+  font-size: 1.5em;
+  color: #ED2030;
+  text-align: center;
+  line-height: 1.8;
+}
