--- a/style/_pitchmojo.scss
+++ b/style/_pitchmojo.scss
@@ -145,6 +145,51 @@
     }
   }
 
+  //case-study-images
+  .case-study-image {
+
+    .content {
+      padding: 0;
+    }
+
+    img {
+      @extend %full-width-img;
+    }
+  }
+
+  //status
+  .status {
+    .content {
+      p:nth-child(1) {
+        font-family: $primary-font-stack;
+        font-weight: 300;
+        color: #000;
+        text-align: center;
+      }
+    }
+  }
+
+  //feedback
+  .feedback {
+    background-color: #4E4E4E;
+    .content {
+      p {
+        color: $body-text-color-light;
+        font-weight: 400;
+        span.quote {
+          color: $body-text-color-light;
+        }
+      }
+      p:nth-child(1), h6 {
+        color: #C7C9C9;
+      }
+
+      h6 {
+        font-weight: 400;
+      }
+    }
+  }
+
   // View Other Case Studies
 
   .view-other-work {
