--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -26,7 +26,7 @@ footer {
   background-color: #171617;
 
   .icon {
-    display: inline-flex;
+    display: inline-block;
 
     a {
       color: #333;
