--- a/style/_section.scss
+++ b/style/_section.scss
@@ -15,6 +15,9 @@ section, footer {
     @media screen and (min-width: $small-devices-up) {
       font-size: 1.3em;
     }
+    @media screen and (min-width: $medium-devices-up) {
+      font-size: 1.6em;
+    }
   }
 }
 
@@ -22,6 +25,14 @@ section, footer {
   height: 23em;
   display: table-cell;
   vertical-align: middle;
+
+  @media screen and (min-width: $small-devices-up) {
+    height: 27em;
+  }
+
+  @media screen and (min-width: $medium-devices-up) {
+    height: 30em;
+  }
 
   h3, h4, p , a {
     color: $body-text-color-light;
