--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -6,13 +6,26 @@ footer {
   p {
     font-family: $primary-font-stack;
     line-height: 1.8;
+
     &:nth-child(1) {
       font-weight: 300;
       font-size: 1.5em;
+      @media screen and (min-width: $small-devices-up) {
+        font-size: 1.8em;
+      }
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 2em;
+      }
     }
     &:nth-child(2) {
       font-weight: 100;
       font-size: 1em;
+      @media screen and (min-width: $small-devices-up) {
+        font-size: 1.1em;
+      }
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 1.3em;
+      }
     }
     a {
       color: $primary-highlight-color;
@@ -27,20 +40,25 @@ footer {
 
   div.icon {
     display: inline-block;
+    padding: 0.5em;
+
+    @media screen and (min-width: $small-devices-up) {
+      padding: 0 0.5em;
+    }
+
+    @media screen and (min-width: $medium-devices-up) {
+      padding: 0 1.5em;
+    }
 
     a {
       color: #333;
-      padding: 0.4em;
+      padding: 1em;
 
       span {
-        font-size: 1.6em;
+        font-size: 2em;
         @media screen and (min-width: $small-devices-up) {
-          font-size: 2em;
+          font-size: 2.5em;
         }
-      }
-
-      @media screen and (min-width: $small-devices-up) {
-        padding: 1em;
       }
 
       &:hover {
@@ -64,9 +82,18 @@ footer {
       font-family: $primary-font-stack;
       font-weight: 100;
 
+      @media screen and (min-width: $medium-devices-up) {
+        line-height: 1.8;
+      }
+
       &:nth-child(1), a {
         padding-top: 1em;
         font-size: 0.9em;
+
+        @media screen and (min-width: $medium-devices-up) {
+          font-size: 1em;
+        }
+
         span.fa {
           color: #FF0000;
           padding: 0.5em;
@@ -75,6 +102,10 @@ footer {
 
       &:nth-child(2) {
         font-size: 0.8em;
+
+        @media screen and (min-width: $medium-devices-up) {
+          font-size: 0.9em;
+        }
       }
 
       a {
