--- a/style/_header.scss
+++ b/style/_header.scss
@@ -10,6 +10,10 @@ header {
     @media screen and (min-width: $small-devices-up) {
       padding: 1em 2em 1em 1em;
     }
+
+    @media screen and (min-width: $medium-devices-up) {
+      padding: 2em 3em 2em 2em;
+    }
   }
 }
 
@@ -26,6 +30,9 @@ header {
   img {
     width: 4em;
     vertical-align: middle;
+    @media screen and (min-width: $medium-devices-up) {
+      width: 5em;
+    }
   }
 }
 
@@ -56,6 +63,7 @@ header {
   padding: 0;
   padding-bottom: 0.2em;
   margin: 1em;
+  
   &:hover {
     background: none;
     @extend %highlight;
@@ -64,6 +72,10 @@ header {
 
   @media screen and (min-width: $small-devices-up) {
     font-size: 1em;
+  }
+
+  @media screen and (min-width: $medium-devices-up) {
+    font-size: 1.1em;
   }
 }
 
