--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -38,10 +38,20 @@
     border-radius: 4px;
     padding: 0.9em 1em 0.8em;
 
+
+    @media screen and (min-width: $small-devices-up) {
+      font-size: 0.9em;
+    }
+
+    @media screen and (min-width: $medium-devices-up) {
+      font-size: 1em;
+    }
+
     &:hover,
     &:active {
       background-color: $normal-color;
       color: $active-color;
     }
+
   }
 
