--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -5,16 +5,27 @@ h2 {
   @media screen and (min-width: $small-devices-up) {
     font-size: 2.5em;
   }
+  @media screen and (min-width: $medium-devices-up) {
+    font-size: 3em;
+  }
 }
 
 h3 {
   font-size: 2.3em;
   font-weight: 700;
+
+  @media screen and (min-width: $small-devices-up) {
+    font-size: 3em;
+  }
 }
 
 h4 {
   font-size: 0.9em;
   font-weight: 100;
+
+  @media screen and (min-width: $small-devices-up) {
+    font-size: 1em;
+  }
 }
 
 p {
@@ -23,6 +34,14 @@ p {
   font-size: 1.1em;
   color: $body-text-color;
   line-height: 1.5;
+
+  @media screen and (min-width: $small-devices-up) {
+    font-size: 1.3em;
+  }
+
+  @media screen and (min-width: $medium-devices-up) {
+    font-size: 1.5em;
+  }
 }
 
 p > span {
