--- a/style/app.css
+++ b/style/app.css
@@ -1306,6 +1306,9 @@ p > span, .pure-menu-selected a.pure-menu-link.current-page, .pure-menu-link:hov
   padding: 2em;
   width: 100%;
   height: auto; }
+  @media screen and (min-width: 48em) {
+    .section-content, .work-content, .footer-content, #pitchmojo .content {
+      padding: 3em; } }
 
 #pitchmojo .view-other-work p, #pitchmojo .view-sutra p, #pitchmojo .view-jottly p {
   font-family: "proxima-nova", sans-serif;
@@ -1332,14 +1335,23 @@ h2 {
   @media screen and (min-width: 35.5em) {
     h2 {
       font-size: 2.5em; } }
+  @media screen and (min-width: 48em) {
+    h2 {
+      font-size: 3em; } }
 
 h3 {
   font-size: 2.3em;
   font-weight: 700; }
+  @media screen and (min-width: 35.5em) {
+    h3 {
+      font-size: 3em; } }
 
 h4 {
   font-size: 0.9em;
   font-weight: 100; }
+  @media screen and (min-width: 35.5em) {
+    h4 {
+      font-size: 1em; } }
 
 p {
   font-family: "minion-pro", serif;
@@ -1347,6 +1359,12 @@ p {
   font-size: 1.1em;
   color: #707070;
   line-height: 1.5; }
+  @media screen and (min-width: 35.5em) {
+    p {
+      font-size: 1.3em; } }
+  @media screen and (min-width: 48em) {
+    p {
+      font-size: 1.5em; } }
 
 p > span {
   font-style: italic; }
@@ -1371,6 +1389,9 @@ header nav {
   @media screen and (min-width: 35.5em) {
     header nav {
       padding: 1em 2em 1em 1em; } }
+  @media screen and (min-width: 48em) {
+    header nav {
+      padding: 2em 3em 2em 2em; } }
 
 .logo {
   width: 100%;
@@ -1381,6 +1402,9 @@ header nav {
   .logo img {
     width: 4em;
     vertical-align: middle; }
+    @media screen and (min-width: 48em) {
+      .logo img {
+        width: 5em; } }
 
 ul.pure-menu-list.menu {
   display: block;
@@ -1407,6 +1431,9 @@ ul.pure-menu-list.menu {
   @media screen and (min-width: 35.5em) {
     .pure-menu-link {
       font-size: 1em; } }
+  @media screen and (min-width: 48em) {
+    .pure-menu-link {
+      font-size: 1.1em; } }
 
 section, footer {
   position: relative; }
@@ -1419,11 +1446,20 @@ section, footer {
     @media screen and (min-width: 35.5em) {
       .section-content p {
         font-size: 1.3em; } }
+    @media screen and (min-width: 48em) {
+      .section-content p {
+        font-size: 1.6em; } }
 
 .work-content {
   height: 23em;
   display: table-cell;
   vertical-align: middle; }
+  @media screen and (min-width: 35.5em) {
+    .work-content {
+      height: 27em; } }
+  @media screen and (min-width: 48em) {
+    .work-content {
+      height: 30em; } }
   .work-content h3, .work-content h4, .work-content p, .work-content a {
     color: #f9f9f9; }
   .work-content h4 {
@@ -1442,6 +1478,12 @@ section, footer {
     border: 2px solid #f9f9f9;
     border-radius: 4px;
     padding: 0.9em 1em 0.8em; }
+    @media screen and (min-width: 35.5em) {
+      .work-content a {
+        font-size: 0.9em; } }
+    @media screen and (min-width: 48em) {
+      .work-content a {
+        font-size: 1em; } }
     .work-content a:hover, .work-content a:active {
       background-color: #f9f9f9;
       color: #4e4e4e; }
@@ -1475,6 +1517,12 @@ section, footer {
     border: 2px solid black;
     border-radius: 4px;
     padding: 0.9em 1em 0.8em; }
+    @media screen and (min-width: 35.5em) {
+      #work-sutra a {
+        font-size: 0.9em; } }
+    @media screen and (min-width: 48em) {
+      #work-sutra a {
+        font-size: 1em; } }
     #work-sutra a:hover, #work-sutra a:active {
       background-color: black;
       color: #f9f9f9; }
@@ -1494,9 +1542,21 @@ section, footer {
   .call-to-action p:nth-child(1) {
     font-weight: 300;
     font-size: 1.5em; }
+    @media screen and (min-width: 35.5em) {
+      .call-to-action p:nth-child(1) {
+        font-size: 1.8em; } }
+    @media screen and (min-width: 48em) {
+      .call-to-action p:nth-child(1) {
+        font-size: 2em; } }
   .call-to-action p:nth-child(2) {
     font-weight: 100;
     font-size: 1em; }
+    @media screen and (min-width: 35.5em) {
+      .call-to-action p:nth-child(2) {
+        font-size: 1.1em; } }
+    @media screen and (min-width: 48em) {
+      .call-to-action p:nth-child(2) {
+        font-size: 1.3em; } }
   .call-to-action p a {
     color: #de6162;
     border-bottom: 1px solid #de6162; }
@@ -1504,18 +1564,22 @@ section, footer {
 .social-media-icons {
   background-color: #171617; }
   .social-media-icons div.icon {
-    display: inline-block; }
+    display: inline-block;
+    padding: 0.5em; }
+    @media screen and (min-width: 35.5em) {
+      .social-media-icons div.icon {
+        padding: 0 0.5em; } }
+    @media screen and (min-width: 48em) {
+      .social-media-icons div.icon {
+        padding: 0 1.5em; } }
     .social-media-icons div.icon a {
       color: #333;
-      padding: 0.4em; }
+      padding: 1em; }
       .social-media-icons div.icon a span {
-        font-size: 1.6em; }
+        font-size: 2em; }
         @media screen and (min-width: 35.5em) {
           .social-media-icons div.icon a span {
-            font-size: 2em; } }
-      @media screen and (min-width: 35.5em) {
-        .social-media-icons div.icon a {
-          padding: 1em; } }
+            font-size: 2.5em; } }
       .social-media-icons div.icon a:hover {
         color: #de6162; }
 
@@ -1527,14 +1591,23 @@ section, footer {
     color: #404040;
     font-family: "proxima-nova", sans-serif;
     font-weight: 100; }
+    @media screen and (min-width: 48em) {
+      .bottom-nav .copyright p {
+        line-height: 1.8; } }
     .bottom-nav .copyright p:nth-child(1), .bottom-nav .copyright p a {
       padding-top: 1em;
       font-size: 0.9em; }
+      @media screen and (min-width: 48em) {
+        .bottom-nav .copyright p:nth-child(1), .bottom-nav .copyright p a {
+          font-size: 1em; } }
       .bottom-nav .copyright p:nth-child(1) span.fa, .bottom-nav .copyright p a span.fa {
         color: #FF0000;
         padding: 0.5em; }
     .bottom-nav .copyright p:nth-child(2) {
       font-size: 0.8em; }
+      @media screen and (min-width: 48em) {
+        .bottom-nav .copyright p:nth-child(2) {
+          font-size: 0.9em; } }
     .bottom-nav .copyright p a {
       color: #404040; }
     .bottom-nav .copyright p:hover a {
