Home Page large screen up styles

--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -47,6 +47,10 @@
       font-size: 1em;
     }
 
+    @media screen and (min-width: $large-devices-up) {
+      font-size: 1.1em;
+    }
+
     &:hover,
     &:active {
       background-color: $normal-color;
