--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -16,6 +16,9 @@ footer {
       @media screen and (min-width: $medium-devices-up) {
         font-size: 2em;
       }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 2.2em;
+      }
     }
     &:nth-child(2) {
       font-weight: 100;
@@ -25,6 +28,9 @@ footer {
       }
       @media screen and (min-width: $medium-devices-up) {
         font-size: 1.3em;
+      }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 1.5em;
       }
     }
     a {
@@ -50,6 +56,10 @@ footer {
       padding: 0 1.5em;
     }
 
+    @media screen and (min-width: $large-devices-up) {
+      padding: 0 2.5em;
+    }
+
     a {
       color: #333;
       padding: 1em;
@@ -58,6 +68,9 @@ footer {
         font-size: 2em;
         @media screen and (min-width: $small-devices-up) {
           font-size: 2.5em;
+        }
+        @media screen and (min-width: $large-devices-up) {
+          font-size: 3em;
         }
       }
 
@@ -91,7 +104,13 @@ footer {
         font-size: 0.9em;
 
         @media screen and (min-width: $medium-devices-up) {
+          padding-top: 1.2em;
           font-size: 1em;
+        }
+
+        @media screen and (min-width: $large-devices-up) {
+          padding-top: 1.5em;
+          font-size: 1.1em;
         }
 
         span.fa {
@@ -105,6 +124,9 @@ footer {
 
         @media screen and (min-width: $medium-devices-up) {
           font-size: 0.9em;
+        }
+        @media screen and (min-width: $large-devices-up) {
+          font-size: 1em;
         }
       }
 
