--- a/style/_header.scss
+++ b/style/_header.scss
@@ -33,6 +33,9 @@ header {
     @media screen and (min-width: $medium-devices-up) {
       width: 5em;
     }
+    @media screen and (min-width: $large-devices-up) {
+      width: 6em;
+    }
   }
 }
 
@@ -63,7 +66,7 @@ header {
   padding: 0;
   padding-bottom: 0.2em;
   margin: 1em;
-  
+
   &:hover {
     background: none;
     @extend %highlight;
@@ -76,6 +79,10 @@ header {
 
   @media screen and (min-width: $medium-devices-up) {
     font-size: 1.1em;
+  }
+
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 1.2em;
   }
 }
 
