--- a/style/_section.scss
+++ b/style/_section.scss
@@ -9,6 +9,10 @@ section, footer {
 .section-content {
   text-align: left;
 
+  @media screen and (min-width: $large-devices-up) {
+    width: 85%;
+  }
+
   p {
     line-height: 1.6;
     padding-top: 0.8em;
@@ -17,6 +21,9 @@ section, footer {
     }
     @media screen and (min-width: $medium-devices-up) {
       font-size: 1.6em;
+    }
+    @media screen and (min-width: $large-devices-up) {
+      font-size: 2em;
     }
   }
 }
