--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -8,6 +8,9 @@ h2 {
   @media screen and (min-width: $medium-devices-up) {
     font-size: 3em;
   }
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 3.5em;
+  }
 }
 
 h3 {
@@ -17,6 +20,10 @@ h3 {
   @media screen and (min-width: $small-devices-up) {
     font-size: 3em;
   }
+
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 3.2em;
+  }
 }
 
 h4 {
@@ -25,6 +32,10 @@ h4 {
 
   @media screen and (min-width: $small-devices-up) {
     font-size: 1em;
+  }
+
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 1.2em;
   }
 }
 
@@ -41,6 +52,10 @@ p {
 
   @media screen and (min-width: $medium-devices-up) {
     font-size: 1.5em;
+  }
+
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 1.7em;
   }
 }
 
