--- a/style/_section.scss
+++ b/style/_section.scss
@@ -40,6 +40,9 @@ section, footer {
   @media screen and (min-width: $medium-devices-up) {
     height: 30em;
   }
+  @media screen and (min-width: $large-devices-up) {
+    height: 35em;
+  }
 
   h3, h4, p , a {
     color: $body-text-color-light;
