medium up for pitchmojo

--- a/style/_pitchmojo.scss
+++ b/style/_pitchmojo.scss
@@ -20,12 +20,24 @@
     @extend %container;
     text-align: left;
 
+    @media screen and (min-width: $small-devices-up) {
+      padding: 2.5em 3em;
+    }
+
+    @media screen and (min-width: $medium-devices-up) {
+      padding: 2.8em 4em;
+    }
+
     p {
       padding: 0.5em 0;
       font-size: 1.1em;
 
       @media screen and (min-width: $small-devices-up) {
         font-size: 1.2em;
+      }
+
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 1.3em;
       }
     }
 
@@ -50,13 +62,20 @@
       height: 30em;
     }
 
+    @media screen and (min-width: $medium-devices-up) {
+      height: 35em;
+    }
+
     p {
       font-size: 2em;
       padding: 0;
       color: $body-text-color-light;
       text-shadow: 0px 2px 4px rgba(0,0,0,0.50);
       @media screen and (min-width: $small-devices-up) {
-        font-size: 3.5em;
+        font-size: 2.7em;
+      }
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 3.4em;
       }
     }
 
@@ -68,10 +87,16 @@
       @media screen and (min-width: $small-devices-up) {
         font-size: 3em;
       }
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 3.5em;
+      }
     }
 
     h4 {
       color: #F9F9F9;
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 1.1em;
+      }
     }
 
   }
@@ -85,6 +110,9 @@
       color: #A5A5A5;
       @media screen and (min-width: $small-devices-up) {
         font-size: 1.4em;
+      }
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 1.6em;
       }
     }
   }
@@ -102,9 +130,11 @@
     p {
       font-size: 1.2em;
       color: #4E4E4E;
-      line-height: 29px;
       @media screen and (min-width: $small-devices-up) {
         font-size: 1.3em;
+      }
+      @media screen and (min-width: $medium-devices-up) {
+        font-size: 1.4em;
       }
     }
 
@@ -144,6 +174,11 @@
       @media screen and (min-width: $small-devices-up) {
         font-size: 1.7em;
       }
+
+      @media screen and (min-width: $medium-devices-up)  {
+        font-size: 1.9em;
+      }
+
     }
   }
 
@@ -157,6 +192,10 @@
         font-size: 1.5em;
         color: #ED2030;
         text-align: center;
+
+        @media screen and (min-width: $medium-devices-up)  {
+          font-size: 1.8em;
+        }
       }
     }
   }
@@ -171,6 +210,10 @@
         font-size: 1.5em;
         color: #55C8CB;
         text-align: center;
+
+        @media screen and (min-width: $medium-devices-up)  {
+          font-size: 1.8em;
+        }
       }
       p:nth-child(3) {
         color: $body-text-color-light;
@@ -236,6 +279,10 @@
       @media screen and (min-width: $small-devices-up) {
         font-size: 1.3em;
       }
+
+      @media screen and (min-width: $medium-devices-up)  {
+        font-size: 1.5em;
+      }
     }
 
   }
@@ -247,6 +294,9 @@
     .content {
       display: table;
     }
+    @media screen and (min-width: $small-devices-up) {
+      width: 50%;
+    }
 
     p {
       @extend %p-centered;
@@ -256,7 +306,11 @@
       @media screen and (min-width: $small-devices-up) {
         font-size: 1.5em;
       }
-      
+
+      @media screen and (min-width: $medium-devices-up)  {
+        font-size: 1.9em;
+      }
+
       a {
         color: #000;
       }
