--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -71,6 +71,9 @@ h5 {
   @media screen and (min-width: $small-devices-up) {
     font-size: 2em;
   }
+  @media screen and (min-width: $medium-devices-up) {
+    font-size: 2.2em;
+  }
 }
 
 h6 {
@@ -82,5 +85,9 @@ h6 {
 
   @media screen and (min-width: $small-devices-up) {
     font-size: 1.7em;
+  }
+
+  @media screen and (min-width: $medium-devices-up)  {
+    font-size: 2em;
   }
 }
