--- a/style/_pitchmojo.scss
+++ b/style/_pitchmojo.scss
@@ -28,6 +28,14 @@
       padding: 2.8em 4em;
     }
 
+    @media screen and (min-width: $large-devices-up) {
+      padding: 2.8em 8em;
+    }
+
+    @media screen and (min-width: $extra-large-devices-up) {
+      padding: 2.8em 12em;
+    }
+
     p {
       padding: 0.5em 0;
       font-size: 1.1em;
@@ -38,6 +46,10 @@
 
       @media screen and (min-width: $medium-devices-up) {
         font-size: 1.3em;
+      }
+
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 1.4em;
       }
     }
 
@@ -50,6 +62,10 @@
       text-align: center;
       color: #C7C9C9;
       font-size: 2.5em;
+
+      @media screen and (min-width: $large-devices-up) {
+        // font-size: 2.8em;
+      }
     }
   }
 
@@ -66,6 +82,10 @@
       height: 35em;
     }
 
+    @media screen and (min-width: $large-devices-up) {
+      height: 40em;
+    }
+
     p {
       font-size: 2em;
       padding: 0;
@@ -76,6 +96,9 @@
       }
       @media screen and (min-width: $medium-devices-up) {
         font-size: 3.4em;
+      }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 4.1em;
       }
     }
 
@@ -90,12 +113,18 @@
       @media screen and (min-width: $medium-devices-up) {
         font-size: 3.5em;
       }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 4.3em;
+      }
     }
 
     h4 {
       color: #F9F9F9;
       @media screen and (min-width: $medium-devices-up) {
         font-size: 1.1em;
+      }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 1.2em;
       }
     }
 
@@ -113,6 +142,9 @@
       }
       @media screen and (min-width: $medium-devices-up) {
         font-size: 1.6em;
+      }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 1.8em;
       }
     }
   }
@@ -136,6 +168,9 @@
       @media screen and (min-width: $medium-devices-up) {
         font-size: 1.4em;
       }
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 1.5em;
+      }
     }
 
     hr {
@@ -157,8 +192,16 @@
       .role {
         float: right;
       }
+    }
 
+    @media screen and (min-width: $large-devices-up) {
+      .project {
+        padding-right: 2em;
+      }
 
+      .role {
+        padding-left: 2em;
+      }
     }
   }
 
@@ -179,6 +222,10 @@
         font-size: 1.9em;
       }
 
+      @media screen and (min-width: $large-devices-up) {
+        font-size: 2.1em;
+      }
+
     }
   }
 
@@ -195,6 +242,10 @@
 
         @media screen and (min-width: $medium-devices-up)  {
           font-size: 1.8em;
+        }
+
+        @media screen and (min-width: $large-devices-up) {
+          font-size: 2em;
         }
       }
     }
