--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -74,6 +74,9 @@ h5 {
   @media screen and (min-width: $medium-devices-up) {
     font-size: 2.2em;
   }
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 2.4em;
+  }
 }
 
 h6 {
@@ -89,5 +92,9 @@ h6 {
 
   @media screen and (min-width: $medium-devices-up)  {
     font-size: 2em;
+  }
+
+  @media screen and (min-width: $large-devices-up) {
+    font-size: 2.3em;
   }
 }
