--- a/style/app.css
+++ b/style/app.css
@@ -1391,6 +1391,9 @@ h5 {
   @media screen and (min-width: 48em) {
     h5 {
       font-size: 2.2em; } }
+  @media screen and (min-width: 64em) {
+    h5 {
+      font-size: 2.4em; } }
 
 h6 {
   font-weight: 300;
@@ -1404,6 +1407,9 @@ h6 {
   @media screen and (min-width: 48em) {
     h6 {
       font-size: 2em; } }
+  @media screen and (min-width: 64em) {
+    h6 {
+      font-size: 2.3em; } }
 
 header nav {
   position: relative;
@@ -1697,6 +1703,12 @@ section, footer {
   @media screen and (min-width: 48em) {
     #pitchmojo .content {
       padding: 2.8em 4em; } }
+  @media screen and (min-width: 64em) {
+    #pitchmojo .content {
+      padding: 2.8em 8em; } }
+  @media screen and (min-width: 80em) {
+    #pitchmojo .content {
+      padding: 2.8em 12em; } }
   #pitchmojo .content p {
     padding: 0.5em 0;
     font-size: 1.1em; }
@@ -1706,6 +1718,9 @@ section, footer {
     @media screen and (min-width: 48em) {
       #pitchmojo .content p {
         font-size: 1.3em; } }
+    @media screen and (min-width: 64em) {
+      #pitchmojo .content p {
+        font-size: 1.4em; } }
   #pitchmojo .content p.section-icon {
     text-align: center; }
   #pitchmojo .content .fa {
@@ -1725,6 +1740,9 @@ section, footer {
   @media screen and (min-width: 48em) {
     #pitchmojo .case-study-hero {
       height: 35em; } }
+  @media screen and (min-width: 64em) {
+    #pitchmojo .case-study-hero {
+      height: 40em; } }
   #pitchmojo .case-study-hero p {
     font-size: 2em;
     padding: 0;
@@ -1736,6 +1754,9 @@ section, footer {
     @media screen and (min-width: 48em) {
       #pitchmojo .case-study-hero p {
         font-size: 3.4em; } }
+    @media screen and (min-width: 64em) {
+      #pitchmojo .case-study-hero p {
+        font-size: 4.1em; } }
   #pitchmojo .case-study-hero h3 {
     font-size: 2.5em;
     color: #ED2030;
@@ -1747,11 +1768,17 @@ section, footer {
     @media screen and (min-width: 48em) {
       #pitchmojo .case-study-hero h3 {
         font-size: 3.5em; } }
+    @media screen and (min-width: 64em) {
+      #pitchmojo .case-study-hero h3 {
+        font-size: 4.3em; } }
   #pitchmojo .case-study-hero h4 {
     color: #F9F9F9; }
     @media screen and (min-width: 48em) {
       #pitchmojo .case-study-hero h4 {
         font-size: 1.1em; } }
+    @media screen and (min-width: 64em) {
+      #pitchmojo .case-study-hero h4 {
+        font-size: 1.2em; } }
 #pitchmojo .project-description p {
   font-family: "proxima-nova", sans-serif;
   font-weight: 300;
@@ -1763,6 +1790,9 @@ section, footer {
   @media screen and (min-width: 48em) {
     #pitchmojo .project-description p {
       font-size: 1.6em; } }
+  @media screen and (min-width: 64em) {
+    #pitchmojo .project-description p {
+      font-size: 1.8em; } }
 #pitchmojo .overview {
   background-color: #55C8CB;
   width: 100%; }
@@ -1777,6 +1807,9 @@ section, footer {
     @media screen and (min-width: 48em) {
       #pitchmojo .overview p {
         font-size: 1.4em; } }
+    @media screen and (min-width: 64em) {
+      #pitchmojo .overview p {
+        font-size: 1.5em; } }
   #pitchmojo .overview hr {
     margin: 1.5em 0;
     width: 3em;
@@ -1789,6 +1822,11 @@ section, footer {
       float: left; }
     #pitchmojo .overview .role {
       float: right; } }
+  @media screen and (min-width: 64em) {
+    #pitchmojo .overview .project {
+      padding-right: 2em; }
+    #pitchmojo .overview .role {
+      padding-left: 2em; } }
 #pitchmojo .intro .content p:nth-child(2) {
   font-family: "proxima-nova", sans-serif;
   font-weight: 400;
@@ -1800,6 +1838,9 @@ section, footer {
   @media screen and (min-width: 48em) {
     #pitchmojo .intro .content p:nth-child(2) {
       font-size: 1.9em; } }
+  @media screen and (min-width: 64em) {
+    #pitchmojo .intro .content p:nth-child(2) {
+      font-size: 2.1em; } }
 #pitchmojo .problem {
   background-color: #fff; }
   #pitchmojo .problem .content p:nth-child(1) {
@@ -1811,6 +1852,9 @@ section, footer {
     @media screen and (min-width: 48em) {
       #pitchmojo .problem .content p:nth-child(1) {
         font-size: 1.8em; } }
+    @media screen and (min-width: 64em) {
+      #pitchmojo .problem .content p:nth-child(1) {
+        font-size: 2em; } }
 #pitchmojo .solution {
   background-color: #2F2F2D; }
   #pitchmojo .solution .content p:nth-child(2) {
