--- a/style/_pitchmojo.scss
+++ b/style/_pitchmojo.scss
@@ -282,6 +282,10 @@
     img {
       @extend %full-width-img;
     }
+
+    img.img-width-adjust {
+      width: 100%;
+    }
   }
 
   //status
@@ -313,6 +317,7 @@
 
       h6 {
         font-weight: 400;
+        color: #55C8CB;
       }
     }
   }
@@ -321,6 +326,12 @@
 
   .view-other-work {
     background-color: #fff;
+
+      @media screen and (min-width: $medium-devices-up)  {
+        .content {
+          padding: 2em 4em;
+        }
+      }
 
     p {
       @extend %p-centered;
@@ -344,6 +355,10 @@
 
     .content {
       display: table;
+
+      @media screen and (min-width: $medium-devices-up) {
+        padding: 2em 4em;
+      }
     }
     @media screen and (min-width: $small-devices-up) {
       width: 50%;
@@ -370,7 +385,7 @@
 
   .view-jottly {
     @media screen and (min-width: $small-devices-up) {
-      float: left;;
+      float: left;
     }
   }
 
