--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,5 +1,5 @@
 
-$background-color: #F9F9F9;
+$background-color: #f9f9f9;
 $nav-text-color: #4E4E4E;
 $body-text-color: #707070;
 $body-text-color-light: $background-color;
